Fix alignment on about page

--- a/_sass/klise/_layout.scss
+++ b/_sass/klise/_layout.scss
@@ -169,7 +169,8 @@
 // Author
 .author {
   text-align: center;
-  margin: 10vh auto;
+  margin: 10% auto;
+  display: inline-block;
 
   .author-avatar {
     object-fit: cover;
